--- a/estilo/style.css
+++ b/estilo/style.css
@@ -64,6 +64,7 @@ header > h1{
     font-weight: normal;
     margin-bottom: 20px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.274);
+    margin: auto;
 }
 
 header > p{
@@ -72,7 +73,7 @@ header > p{
     width: 500px;
     color: white;
     margin: auto;
-    margin-bottom: 30px;
+    padding-bottom: 30px;
     padding-right: 10px;
     padding-left: 10px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.274);
